--- a/rules/config
+++ b/rules/config
@@ -184,8 +184,10 @@ TRUSTED_GPG_URLS = https://packages.trafficmanager.net/debian/public_key.gpg,htt
 #   web   : web packages, downloaded by wget, curl
 #   git   : git repositories, donloaded by git clone
 #   docker: docker base images
-SONIC_VERSION_CONTROL_COMPONENTS ?= none
+SONIC_VERSION_CONTROL_COMPONENTS ?= py2,py3,web,git,docker
 
+# MIRROR_SNAPSHOT - support mirror snapshot flag
+MIRROR_SNAPSHOT ?= y
 # SONiC docker registry
 #
 # Set the env variable ENABLE_DOCKER_BASE_PULL = y to enable pulling sonic-slave docker from registry
@@ -196,4 +198,4 @@ REGISTRY_SERVER ?= sonicdev-microsoft.azurecr.io
 INCLUDE_MUX = y
 
 # reset default container registry from dockerhub to other
-DEFAULT_CONTAINER_REGISTRY ?=
+DEFAULT_CONTAINER_REGISTRY ?= publicmirror.azurecr.io
