新增SONiC外部依赖CPLD仓库

--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,7 @@
 	path = src/dhcprelay
 	url = https://github.com/sonic-net/sonic-dhcp-relay.git
 	branch = 202012
+[submodule "cpld"]
+	path = platform/clounix/sonic-platform-modules-flines/cpld
+	url = ssh://git@172.168.120.89:3022/flks/cpld.git
+	branch = master
